--- a/App/Forms/resources/assets/less/form.less
+++ b/App/Forms/resources/assets/less/form.less
@@ -31,12 +31,18 @@
         {
             background: #fff !important;
         }
-
+        
+        .header,
+        .question,
+        .x-toolbar-default
+        {
+            padding: 16px 17px;
+        }
+        
         .header
         {
 
             margin-bottom: 22px;
-            padding: 16px 17px;
 
             .title,
             .description
@@ -63,8 +69,6 @@
         .question
         {
             
-            padding: 16px 17px;
-
             &.header
             {
 
@@ -85,6 +89,22 @@
 
             }
         }
+        
+        .btnSend
+        {
+            font-size: 14px;
+            font-weight: 500;
+            text-align: center;
+            text-transform: uppercase;
+            line-height: 20px;
+            margin: 8px;
+            background-color: #4285f4;
+            .x-btn-inner-default-toolbar-large
+            {
+                color: #fff;
+            }
+        }
+        
     }
     
 }
